create 2 column topbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <div class="topbar">
         <div class="container">
-            <img src="ipersonic-logo.png" width="100" />
+            <div class="grid">
+                <div class="logo">
+                    <img src="ipersonic-logo.png" />
+                </div>
+                <div class="topmenu">
+                    <ul>
+                        <li><a href="#">Tipe Kepribadian</a></li>
+                        <li><a href="#">Bahasa Indonesia</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </body>
