--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="64x64">
+    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Tes kepribadian gratis dari iPersonic</title>
 </head>
@@ -16,7 +17,16 @@
                 </div>
                 <div class="topmenu">
                     <ul>
-                        <li><a href="#">Tipe Kepribadian</a></li>
+                        <li>
+                            <a href="#">Tipe Kepribadian <i class="fa fa-sort-desc" aria-hidden="true"></i></a>
+                            <ul>
+                                <li><a href="#">Idealis Penyelaras</a></li>
+                                <li><a href="#">Idealis Terlibat</a></li>
+                                <li><a href="#">Pemikir Dinamis</a></li>
+                                <li><a href="#">Pemikir Pendobrak</a></li>
+                                <li><a href="#">Idealis Spontan</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">Bahasa Indonesia</a></li>
                     </ul>
                 </div>
