Fixing caret down icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="topmenu">
                     <ul>
                         <li>
-                            <a href="#">Tipe Kepribadian <i class="fa fa-sort-desc" aria-hidden="true"></i></a>
+                            <a href="#">Tipe Kepribadian <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                             <ul>
                                 <li><a href="#">Idealis Penyelaras</a></li>
                                 <li><a href="#">Idealis Terlibat</a></li>
